--- a/LEK_Themen.org
+++ b/LEK_Themen.org
@@ -8,18 +8,25 @@
 #+TITLE: =LEK-Themen=
 * =00_ITILv3.pdf=
 - S.3: Was ist ITIL
-* =ITIL_11_Practices=
-- Folie 3: Unterschied Prozess / Praxis
-- Folie 6: Gruppen des Praktiken
-- Folie 10: Information Security (Kasten)
-- Folie 16: Organisational Change Management (OCM): menschliche Aspekte
-- Folie 32: Change Enablement: organisatorische Aspekte (Change Authority)
-- Folie 20: Risk management:
+* =ITIL_11_Practices.pdf=
++ Folie 3: Unterschied Prozess / Praxis
++ Folie 6: Gruppen des Praktiken
++ Folie 10: Information Security (Kasten)
++ Folie 16: Organisational Change Management (OCM): menschliche Aspekte
++ Folie 32: Change Enablement: organisatorische Aspekte (Change Authority)
++ Folie 33: Incident management
++ Incident = Ereignis, dass die Ausführung eines Services stört oder unmöglich macht.
++ Folie 20: Risk management
+- Risiken sind Teil des Geschäfts.
 - identifizieren / analysieren / begegnen
-- "Risiken sind Teil des Geschäfts."
-- Folie 33: Incident management
-- Incident = Ein Ereignis, dass die Ausführung eines Dienstes stört oder unmögllich macht.
-- Folie 38: Problem management
-  - Problem = Ursache eines Incidents
-- Folie 45: Disaster management
-  - Disaster = Incident der die Existent der Organisation oder ihren Wert gefährdet.
++ Folie 38: Problem management
++ Problem = Ursache eines Incidents
++ Folie 45: Disaster management
+- Disaster = Incident der die Existent der Organisation oder ihren Wert gefährdet.
+- Folie 26: Workforce & Talent management
+- Folie 47: Service design
+* =ITIL_Überblick_simple.pdf=
+* =ITIL_03_Vier_Dimensionen.pdf=
+- Folie 3:
+- 4 Dimension: Interne Faktoren, die einander beeinflussen
+- Externe Faktoren beeinflussen von außen.
